fix navbar overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,8 +54,8 @@
   width: 2rem;
   height: 2rem;
   margin: auto 0;
-  right: 16rem;
-  position: fixed;
+  /* right: 16rem; */
+  /* position: fixed; */
   box-shadow: inset 0 0 0 2px var(--dark-color);
   border-radius: var(--border-radius);
   align-items: center;
@@ -138,7 +138,7 @@
 .project .grid {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
@@ -152,24 +152,16 @@
 
 .project1 {
   border-radius: var(--border-radius);
-
-  grid-area: 1 / 1 / 2 / 2;
 }
 
 .project2 {
   border-radius: 5px;
-
-  grid-area: 1 / 2 / 2 / 3;
 }
 .project3 {
   border-radius: 5px;
-
-  grid-area: 2 / 1 / 3 / 2;
 }
 .project4 {
   border-radius: 5px;
-
-  grid-area: 2 / 2 / 3 / 3;
 }
 
 .skilksWrapper {
